# LakeNES

./: .gitignore  Cargo.toml  README.md  index.js  package.json
.old/: old.rs  oldppu.rs
lakenes_core/: Cargo.toml
lakenes_core/src/: apu.rs  bus.rs  lib.rs  memory.rs  ppu.rs  rom.rs
lakenes_core/src/apu/: dmc.rs  frame_counter.rs  mod.rs  noise.rs  pulse.rs  triangle.rs  units.rs
lakenes_core/src/cpu/: disasm.rs  mod.rs
lakenes_core/src/fds/: audio.rs  disk.rs  mod.rs
lakenes_core/src/mappers/: mapper0.rs  mapper1.rs  mapper2.rs  mapper4.rs  mod.rs
lakenes_core/src/rom/: mapper000_nrom.rs  mapper001_mmc1.rs  mapper002_uxrom.rs  mapper003_cnrom.rs  mapper004_mmc3.rs  mapper005_mmc5.rs  mapper007_axrom.rs  mapper009_mmc2.rs  mapper010_mmc4.rs  mapper1.rs  mapper174_ntdec.rs  mapper178_nj0430.rs  mapper1_mmc1.rs  mapper2.rs  mod.rs  (+6 more)
lakenes_desktop/: Cargo.toml
lakenes_desktop/src/: logger.rs  main.rs
lakenes_desktop/tests/: blargg_cpu.rs  mapper_regression.rs  nes_test_roms_ppu.rs
lakenes_desktop/tests/common/: mod.rs
lakenes_desktop/tests/roms/: README.md
lakenes_libretro/: Cargo.toml  lakenes_libretro.info
lakenes_libretro/src/: lib.rs  logger.rs
lakenes_wasm/: index.html  index.js  package-lock.json  package.json
lakenes_wasm/pkg/: lakenes_wasm.d.ts  lakenes_wasm.js  lakenes_wasm_bg.wasm  lakenes_wasm_bg.wasm.d.ts  package.json
lakenes_wasm/src/: lib.rs
pkg/: lakenes_wasm.js  lakenes_wasm_bg.wasm
roms/: testroms.json
roms/misc/: misc_accuracy_coin.nes
src/: bus.rs  joypad.rs  main.rs  memory.rs  ppu.rs  rom.rs
src/cpu/: mod.rs
(+70 files in other folders)
